[project]
name = "streamlits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "geopy>=2.4.1",
    "ibis-framework[duckdb,polars]>=10.8.0",
    "polars>=1.32.3",
    "pygwalker>=0.4.9.15",
    "streamlit>=1.48.1",
]
